css horizontal y vertical, cambios de html para su buen funcionamiento

--- a/app-muiscas/www/index.html
+++ b/app-muiscas/www/index.html
@@ -1,70 +1,28 @@
 <!DOCTYPE html>
-<!--
-    Licensed to the Apache Software Foundation (ASF) under one
-    or more contributor license agreements.  See the NOTICE file
-    distributed with this work for additional information
-    regarding copyright ownership.  The ASF licenses this file
-    to you under the Apache License, Version 2.0 (the
-    "License"); you may not use this file except in compliance
-    with the License.  You may obtain a copy of the License at
-
-    http://www.apache.org/licenses/LICENSE-2.0
-
-    Unless required by applicable law or agreed to in writing,
-    software distributed under the License is distributed on an
-    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-     KIND, either express or implied.  See the License for the
-    specific language governing permissions and limitations
-    under the License.
--->
 <html>
     <head>
-        <!--
-        Customize this policy to fit your own app's needs. For more guidance, see:
-            https://github.com/apache/cordova-plugin-whitelist/blob/master/README.md#content-security-policy
-        Some notes:
-            * gap: is required only on iOS (when using UIWebView) and is needed for JS->native communication
-            * https://ssl.gstatic.com is required only on Android and is needed for TalkBack to function properly
-            * Disables use of inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
-                * Enable inline JS: add 'unsafe-inline' to default-src
-        -->
-        <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *">
-        <meta name="format-detection" content="telephone=no">
-        <meta name="msapplication-tap-highlight" content="no">
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
-        <link rel="stylesheet" type="text/css" href="css/index.css">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1">
+                    <!-- Esté es el css vertical -->
+        <link rel="stylesheet" media="all and (orientation:portrait)" type="text/css" href="css/indexv.css">
+                    <!-- Este es el css horizontal -->
+        <link rel="stylesheet" media="all and (orientation:landscape)" type="text/css" href="css/indexh.css">
         <title>Lengua Muisca Cartilla</title>
     </head>
     <body>
-        <div id = "cabecera">
-            <img id="logo" src="img/logosuperiorizquierdo.png">
+        <div  class= "cabecera">
+            <img class="logo" src="img/logosuperiorizquierdo.png">
             <p class = "titulos">Lengua Muisca Cartilla</p>
         </div>
 
-        <div id = "cuerpo">
-            <div class="botonesderecho">Aqui Boton 1</div>
-            <div class="botonesizquierdo">Aqui Boton 2</div>
-            <div class="botonesderecho">Aqui Boton 3</div>
-            <div class="botonesizquierdo">Aqui Boton 4</div>
-            <div class="botoncentro">Aqui Boton 5</div>
+        <div class= "cuerpo">
+            <div class="botones derechos">Aqui Boton 1</div>
+            <div class="botones izquierdos">Aqui Boton 2</div>
+            <div class="botones derechos">Aqui Boton 3</div>
+            <div class="botones izquierdos">Aqui Boton 4</div>
+            <div class="botones centros">Aqui Boton 5</div>
             <div class="pie">Informacion del pie de pagina</div>
-            
         </div>
-
-
-
-
-
-
-
         </div>    
-
-
-
-
-        
-
-        <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
     </body>
 </html>
