--- a/app-muiscas/platforms/browser/www/index.html
+++ b/app-muiscas/platforms/browser/www/index.html
@@ -33,16 +33,37 @@
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
         <link rel="stylesheet" type="text/css" href="css/index.css">
-        <title>Hello World</title>
+        <title>Lengua Muisca Cartilla</title>
     </head>
     <body>
-        <div class="app">
-            <h1>Apache Cordova</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
-            </div>
+        <div id = "cabecera">
+            <img id="logo" src="img/logosuperiorizquierdo.png">
+            <p class = "titulos">Lengua Muisca Cartilla</p>
         </div>
+
+        <div id = "cuerpo">
+            <div class="botonesderecho">Aqui Boton 1</div>
+            <div class="botonesizquierdo">Aqui Boton 2</div>
+            <div class="botonesderecho">Aqui Boton 3</div>
+            <div class="botonesizquierdo">Aqui Boton 4</div>
+            <div class="botoncentro">Aqui Boton 5</div>
+            <div class="pie">Informacion del pie de pagina</div>
+            
+        </div>
+
+
+
+
+
+
+
+        </div>    
+
+
+
+
+        
+
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
     </body>
