ronda de colores

--- a/app-muiscas/www/index.html
+++ b/app-muiscas/www/index.html
@@ -16,8 +16,8 @@
         </div>
 
         <div class= "cuerpo">
-            <div class="botones derechos">Aqui Boton 1</div>
-            <div class="botones izquierdos">Aqui Boton 2</div>
+            <div class="botones derechos arriba">Aqui Boton 1</div>
+            <div class="botones izquierdos arriba">Aqui Boton 2</div>
             <div class="botones derechos">Aqui Boton 3</div>
             <div class="botones izquierdos">Aqui Boton 4</div>
             <div class="botones centros">Aqui Boton 5</div>
