texto pie de pagina y comportamiento boton 5

--- a/app-muiscas/www/index.html
+++ b/app-muiscas/www/index.html
@@ -21,7 +21,7 @@
             <div class="botones derechos">Aqui Boton 3</div>
             <div class="botones izquierdos">Aqui Boton 4</div>
             <div class="botones centros">Aqui Boton 5</div>
-            <div class="pie">Informacion del pie de pagina</div>
+            <div class="pie">Desarrollado por www.libecolaboracion.org</div>
         </div>
         </div>    
     </body>
