maquetando seccion numeros

--- a/app-muiscas/www/numeros/numeros.html
+++ b/app-muiscas/www/numeros/numeros.html
@@ -1,49 +1,30 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="../css/numeros.css">
-</head>
-<body>
-<div class="titulo1">
-    <h1>Unité 1</h1>
-</div>
-<a href="#modal">
-    <img src="../imagenes/iconos/grammaire.svg">
-</a>
-<div class="menu1">
-    <div class="unidad1">
-        <a href="chiffres1.html">
-            <div class="marco1">
-                <h2 class="chiffres">De zéro à vingt</h2>
-            </div>
-        </a>
-    </div>
-    <div class="unidad2">
-        <a href="exercices1.html">
-            <div class="marco1">
-                <h2 class="chiffres">Exercices</h2>
-            </div>
-        </a>
-    </div>
-    <div class="unidad3">
-        <a href="index.html">
-            <div class="marco1">
-                <h2 class="chiffres">Accueil</h2>
-            </div>
-        </a>
-    </div> 
-</div>
-<div id="modal" class="mascara">
-    <div class="modalbox movedown">
-        <h3 class="remarque1">Remarque</h3>
-        <div class="texto">
-            <p class="grammaire">Les nombres de 0 à 20 sont les chiffres que vous devez absolument connaître.</p>
-            <p class="grammaire"><b>Il est nécessaire les mémoriser.</b></p>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1">
+                    <!-- Esté es el css vertical -->
+        <link rel="stylesheet" media="all and (orientation:portrait)" type="text/css" href="css/numerosxv.css">
+                    <!-- Este es el css horizontal -->
+        <link rel="stylesheet" media="all and (orientation:landscape)" type="text/css" href="css/numerosxh.css">
+        <title>Numeros</title>
+    </head>
+    <body>
+        <div  class= "cabecera">
+            <img class="logo" src="imagenes/sapo.jpeg">
+            <p class = "titulos">Lengua Muisca Cartilla</p>
         </div>
-        <a href="#cerrar" title="cerrar" class="cerrar1">Fermer</a>
-    </div>
-</div>
-</body>
+
+        <div  class= "seccion">
+            <p class = "subtitulos">Los Numeros</p>
+        </div>
+
+        <div class= "cuerpo">
+            <div class="botones derechos arriba"> <img class="boton" src="imagenes/boton.png"></div>
+            <div class="botones izquierdos arriba"><img class="boton" src="imagenes/boton.png"></div>
+            <div class="botones centros"><img class="boton" src="imagenes/boton3.png"></div>
+            <div class="pie">Desarrollado por www.libecolaboracion.org</div>
+        </div>
+        </div>    
+    </body>
 </html>
