primeros funciones link menus y boto numeros

--- a/app-muiscas/platforms/android/assets/www/index.html
+++ b/app-muiscas/platforms/android/assets/www/index.html
@@ -16,7 +16,7 @@
         </div>
 
         <div class= "cuerpo">
-            <div class="botones derechos arriba">Aqui Boton 1</div>
+            <div class="botones derechos arriba"><a href="numeros/numeros.html"><img class="boton" src="img/numerosboton.png"></div>
             <div class="botones izquierdos arriba">Aqui Boton 2</div>
             <div class="botones derechos">Aqui Boton 3</div>
             <div class="botones izquierdos">Aqui Boton 4</div>
