--- a/app-muiscas/www/numeros/numeros.html
+++ b/app-muiscas/www/numeros/numeros.html
@@ -17,7 +17,7 @@
 <nav id="menu" class="invisible">
         <ul>
             <li class="titulomenu">Cartilla<br>Muysccubun<img onclick="menuc()" class="menuatras" src="../img/atrasmenu.svg"/></li>
-            <li class="menuli"><a href="#"><span class=""></span>Inicio</a></li>
+            <li class="menuli"><a href="../index.html"><span class=""></span>Inicio</a></li>
             <li class="menuli"><a href="#"><span class=""></span>Saludos y presentación</a></li>
             <li class="menuli"><a href="#"><span class=""></span>Numeros</a></li>
             <li class="menuli"><a href="#"><span class=""></span>Mercado</a></li>
