--- a/app-muiscas/platforms/android/assets/www/numeros/numeros.html
+++ b/app-muiscas/platforms/android/assets/www/numeros/numeros.html
@@ -2,23 +2,34 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1">
+        <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1, maximum-scale=2">
+                    <!-- Esté es el css del menu -->
+        <link rel="stylesheet" type="text/css" href="../css/menu.css">
                     <!-- Esté es el css vertical -->
         <link rel="stylesheet" media="all and (orientation:portrait)" type="text/css" href="css/numerosxv.css">
                     <!-- Este es el css horizontal -->
         <link rel="stylesheet" media="all and (orientation:landscape)" type="text/css" href="css/numerosxh.css">
+        <script src="../js/index.js" type="text/javascript"></script>
         <title>Numeros</title>
     </head>
     <body>
+<!--  menu    -->
+<nav id="menu" class="invisible">
+        <ul>
+            <li class="titulomenu">Cartilla<br>Muysccubun<img onclick="menuc()" class="menuatras" src="../img/atrasmenu.svg"/></li>
+            <li class="menuli"><a href="../index.html"><span class=""></span>Inicio</a></li>
+            <li class="menuli"><a href="#"><span class=""></span>Saludos y presentación</a></li>
+            <li class="menuli"><a href="#"><span class=""></span>Numeros</a></li>
+            <li class="menuli"><a href="#"><span class=""></span>Mercado</a></li>
+            <li class="menuli"><a href="#"><span class=""></span>Ronda de colores</a></li>
+            <li class="menuli"><a href="#"><span class=""></span>Información</a></li>
+        </ul>
+    </nav>
+<!-- fin del menu    -->
         <div  class= "cabecera">
-            <img class="logo" src="imagenes/sapo.jpeg">
-            <p class = "titulos">Lengua Muisca Cartilla</p>
+            <img class="logo" onclick="menu('#01579b')" src="imagenes/sapo.jpeg">
+            <p class = "titulos">Los numeros</p>
         </div>
-
-        <div  class= "seccion">
-            <p class = "subtitulos">Los Numeros</p>
-        </div>
-
         <div class= "cuerpo">
             <div class="botones derechos arriba"> <img class="boton" src="imagenes/boton.png"></div>
             <div class="botones izquierdos arriba"><img class="boton" src="imagenes/boton.png"></div>
