chat imagenes principales

--- a/app-muiscas/www/SaludosyPresentacion/saludos.html
+++ b/app-muiscas/www/SaludosyPresentacion/saludos.html
@@ -26,18 +26,22 @@
         </ul>
     </nav>
 <!-- fin del menu    -->
-
-
-
         <div  class= "cabecera">
-            <img class="logo" src="img/logosuperiorizquierdo.png">
+            <img class="logo" src="imagenes/logosuperiorizquierdo.png">
             <p class = "titulos">Lengua Muisca Cartilla</p>
         </div>
 
         <div class= "cuerpo">
-            
+            <div  class= "chat">
+                <img class="chat izquierdo" src="imagenes/chatiz.png">
+                <img class="chat derecho" src="imagenes/chatder.png">
+                <img class="chat izquierdo" src="imagenes/chatiz.png">
+                <img class="chat derecho" src="imagenes/chatder.png">
+                <img class="chat izquierdo" src="imagenes/chatiz.png">
+                <img class="chat derecho" src="imagenes/chatder.png">
+            </div>
             <div class="pie">Desarrollado por www.libecolaboracion.org</div>
         </div>
-        </div>    
+        
     </body>
 </html>
