--- a/app-muiscas/www/saludos/saludos.html
+++ b/app-muiscas/www/saludos/saludos.html
@@ -26,17 +26,12 @@
         </ul>
     </nav>
 <!-- fin del menu    -->
-
-
-
         <div  class= "cabecera">
-            <img class="logo" src="img/logosuperiorizquierdo.png">
-            <p class = "titulos">Lengua Muisca Cartilla</p>
+            <img class="logo" onclick="menu('#1AB1E1')"src="../img/caralineasbn.svg">
+            <p class = "titulos">Chat Myusscubun</p>
         </div>
-
         <div class= "cuerpo">
             
-            <div class="pie">Desarrollado por www.libecolaboracion.org</div>
         </div>
         </div>    
     </body>
