--- a/app-muiscas/www/index.html
+++ b/app-muiscas/www/index.html
@@ -7,22 +7,39 @@
         <link rel="stylesheet" media="all and (orientation:portrait)" type="text/css" href="css/indexv.css">
                     <!-- Este es el css horizontal -->
         <link rel="stylesheet" media="all and (orientation:landscape)" type="text/css" href="css/indexh.css">
-        <title>Lengua Muisca Cartilla</title>
+        <title>Cartilla sobre lengua Muisca</title>
     </head>
     <body>
-        <div  class= "cabecera">
-            <img class="logo" src="img/logosuperiorizquierdo.png">
-            <p class = "titulos">Lengua Muisca Cartilla</p>
+        <div class= "cabecera">
+            <p class = "titulos">Cartilla Muysccubun</p>
         </div>
 
         <div class= "cuerpo">
-            <div class="botones derechos arriba"><a href="numeros/numeros.html"><img class="boton" src="img/numerosboton.png"></div>
-            <div class="botones izquierdos arriba">Aqui Boton 2</div>
-            <div class="botones derechos">Aqui Boton 3</div>
-            <div class="botones izquierdos">Aqui Boton 4</div>
-            <div class="botones centros">Aqui Boton 5</div>
-            <div class="pie">Desarrollado por www.libecolaboracion.org</div>
+            <div class="botones derechos arriba">
+                <a href="saludos/saludos.html">
+                    <img class="icono" src="img/triangulosbn.svg">
+                </a>
+            </div>
+            <div class="botones izquierdos arriba">
+                <a href="saludos/saludos.html">
+                    <img class="icono" src="img/carajarronbn.svg">
+                </a>
+            </div>
+            <div class="botones derechos">
+                <a href="saludos/saludos.html">
+                    <img class="icono" src="img/espiralbn.svg">
+                </a>
+            </div>
+            <div class="botones izquierdos">
+                <a href="saludos/saludos.html">
+                    <img class="icono" src="img/texturadobn.svg">
+                </a>
+            </div>
+            <div class="botones centros">
+                <a href="saludos/saludos.html">
+                    <img class="icono" src="img/caralineasbn.svg">
+                </a>
+            </div>
         </div>
-        </div>    
     </body>
 </html>
