pantalla inicio horizontal

--- a/app-muiscas/www/index.html
+++ b/app-muiscas/www/index.html
@@ -16,28 +16,33 @@
 
         <div class= "cuerpo">
             <div class="botones derechos arriba">
-                <a href="saludos/saludos.html">
+                <a class="textoicono" href="saludos/saludos.html">
                     <img class="icono" src="img/triangulosbn.svg">
+                    <p>Saludos y Presentacion</p>
                 </a>
             </div>
             <div class="botones izquierdos arriba">
-                <a href="saludos/saludos.html">
+                <a class="textoicono" href="saludos/saludos.html">
                     <img class="icono" src="img/carajarronbn.svg">
+                    <p>Mercado</p>
                 </a>
             </div>
             <div class="botones derechos">
-                <a href="saludos/saludos.html">
+                <a class="textoicono" href="saludos/saludos.html">
                     <img class="icono" src="img/espiralbn.svg">
+                    <p>Numeros</p>
                 </a>
             </div>
             <div class="botones izquierdos">
-                <a href="saludos/saludos.html">
+                <a class="textoicono" href="saludos/saludos.html">
                     <img class="icono" src="img/texturadobn.svg">
+                    <p>Información</p>
                 </a>
             </div>
             <div class="botones centros">
-                <a href="saludos/saludos.html">
+                <a class="textoicono" href="saludos/saludos.html">
                     <img class="icono" src="img/caralineasbn.svg">
+                    <p>Ronda de colores</p>
                 </a>
             </div>
         </div>
