numeros.html horizontal

--- a/app-muiscas/www/index.html
+++ b/app-muiscas/www/index.html
@@ -16,32 +16,32 @@
 
         <div class= "cuerpo">
             <div class="botones derechos arriba">
-                <a class="textoicono" href="saludos/saludos.html">
+                <a class="textoicono" href="SaludosyPresentacion/saludos.html">
                     <img class="icono" src="img/triangulosbn.svg">
                     <p>Saludos y Presentacion</p>
                 </a>
             </div>
             <div class="botones izquierdos arriba">
-                <a class="textoicono" href="saludos/saludos.html">
+                <a class="textoicono" href="mercado/mercado.html">
                     <img class="icono" src="img/carajarronbn.svg">
                     <p>Mercado</p>
                 </a>
             </div>
             <div class="botones derechos">
-                <a class="textoicono" href="saludos/saludos.html">
+                <a class="textoicono" href="numeros/numeros.html">
                     <img class="icono" src="img/espiralbn.svg">
                     <p>Numeros</p>
                 </a>
             </div>
             <div class="botones izquierdos">
-                <a class="textoicono" href="saludos/saludos.html">
+                <a class="textoicono" href="informacion/informacion.html">
                     <img class="icono" src="img/texturadobn.svg">
                     <p>Información</p>
                 </a>
             </div>
             <div class="botones centros">
-                <a class="textoicono" href="saludos/saludos.html">
-                    <img class="icono" src="img/caralineasbn.svg">
+                <a class="textoicono" href="rondadecolores/rondadecolores.html">
+                    <img class="icono imgcentro" src="img/caralineasbn.svg">
                     <p>Ronda de colores</p>
                 </a>
             </div>
