--- a/app-muiscas/www/numeros/numeros.html
+++ b/app-muiscas/www/numeros/numeros.html
@@ -8,7 +8,7 @@
                     <!-- Esté es el css vertical -->
         <link rel="stylesheet" media="all and (orientation:portrait)" type="text/css" href="css/numerosxv.css">
                     <!-- Este es el css horizontal -->
-        <link rel="stylesheet" media="all and (orientation:landscape)" type="text/css" href="css/numerosxh.css">
+        <link rel="stylesheet" media="all and (orientation:landscape)" type="text/css" href="../numeros/css/numerosxh.css">
         <script src="../js/index.js" type="text/javascript"></script>
         <title>Numeros</title>
     </head>
@@ -17,24 +17,23 @@
 <nav id="menu" class="invisible">
         <ul>
             <li class="titulomenu">Cartilla<br>Muysccubun<img onclick="menuc()" class="menuatras" src="../img/atrasmenu.svg"/></li>
-            <li class="menuli"><a href="../index.html"><span class=""></span>Inicio</a></li>
-            <li class="menuli"><a href="#"><span class=""></span>Saludos y presentación</a></li>
-            <li class="menuli"><a href="#"><span class=""></span>Numeros</a></li>
-            <li class="menuli"><a href="#"><span class=""></span>Mercado</a></li>
-            <li class="menuli"><a href="#"><span class=""></span>Ronda de colores</a></li>
-            <li class="menuli"><a href="#"><span class=""></span>Información</a></li>
+            <li class="menuli"><a href="../index.html"> Inicio</a></li>
+            <li class="menuli"><a href="../SaludosyPresentacion/saludos.html"> Saludos y presentación</a></li>
+            <li class="menuli"><a href="../numeros/numeros.html">Numeros</a></li>
+            <li class="menuli"><a href="../mercado/mercado.html">Mercado</a></li>
+            <li class="menuli"><a href="../rondadecolores/rondadecolores.html">Ronda de colores</a></li>
+            <li class="menuli"><a href="../informacion/informacion.html">Información</a></li>
         </ul>
     </nav>
 <!-- fin del menu    -->
         <div  class= "cabecera">
-            <img class="logo" onclick="menu('#01579b')" src="imagenes/sapo.jpeg">
-            <p class = "titulos">Los numeros</p>
+            <img class="logo" onclick="menu('#95C11E')" src="../img/menu.svg">
+            <p class = "titulo">Los numeros</p>
         </div>
         <div class= "cuerpo">
-            <div class="botones derechos arriba"> <img class="boton" src="imagenes/boton.png"></div>
-            <div class="botones izquierdos arriba"><img class="boton" src="imagenes/boton.png"></div>
-            <div class="botones centros"><img class="boton" src="imagenes/boton3.png"></div>
-            <div class="pie">Desarrollado por www.libecolaboracion.org</div>
+            <img class="boton derechos" src="imagenes/boton.png">
+            <img class="boton centros" src="imagenes/boton.png">
+            <img class="boton izquierdos" src="imagenes/boton.png">
         </div>
         </div>    
     </body>
