chat bombas en css saludos

--- a/app-muiscas/www/SaludosyPresentacion/saludos.html
+++ b/app-muiscas/www/SaludosyPresentacion/saludos.html
@@ -32,14 +32,18 @@
         </div>
 
         <div class= "cuerpo">
-            <div  class= "chat">
-                <img class="chat izquierdo" src="imagenes/chatiz.png">
-                <img class="chat derecho" src="imagenes/chatder.png">
-                <img class="chat izquierdo" src="imagenes/chatiz.png">
-                <img class="chat derecho" src="imagenes/chatder.png">
-                <img class="chat izquierdo" src="imagenes/chatiz.png">
-                <img class="chat derecho" src="imagenes/chatder.png">
-            </div>
+            
+            <div class="bombaiz capa1 capa2"><p>hola</p></div>
+            <div class="bombader capa1 capa2"><p>Como estas?</p></div>
+            <div class="bombaiz capa1 capa2"><p>Bien cuentame</p></div>
+            <div class="bombader capa1 capa2"><p>por aca pensando</p></div>
+            <div class="bombaiz capa1 capa2"><p>en que</p></div>
+            <div class="bombader capa1 capa2"><p>en que estos botones son un lio</p></div>
+
+
+
+
+
             <div class="pie">Desarrollado por www.libecolaboracion.org</div>
         </div>
         
