--- a/app-muiscas/www/SaludosyPresentacion/saludos.html
+++ b/app-muiscas/www/SaludosyPresentacion/saludos.html
@@ -30,15 +30,12 @@
             <img class="logo" onclick="menu('#1AB1E1')" src="../img/menu.svg">
             <p class = "titulo">Chat Myusscubun</p>
         </div>
-        <div class= "cuerpo">
+        <div class= "cuerpo chat">
+            <a class= "bombaiz capa1 capa2" href="html/Saludos.html"><p>hola, como te llamas?</p></a>
             
-            <div class="bombaiz capa1 capa2"><p>hola</p></div>
-            <div class="bombader capa1 capa2"><p>Como estas?</p></div>
-            <div class="bombaiz capa1 capa2"><p>Bien cuentame</p></div>
-            <div class="bombader capa1 capa2"><p>por aca pensando</p></div>
-            <div class="bombaiz capa1 capa2"><p>en que</p></div>
-            <div class="bombader capa1 capa2"><p>en que estos botones son un lio</p></div>
+            <a class= "bombader capa1 capa2" href="html/Decir-mi-nombre-y-lugar-de-procedencia.html"><p>Mi nombre es Carlos</p></a>
 
+            
 
 
 
