burbujas del chatmuysccubun

--- a/app-muiscas/www/SaludosyPresentacion/saludos.html
+++ b/app-muiscas/www/SaludosyPresentacion/saludos.html
@@ -31,6 +31,46 @@
             <p class = "titulo">Chat Myusscubun</p>
         </div>
         <div class= "cuerpo chat">
+<!--   Mi propuesta de burbujas       -->
+            <div class="contizquierda"> <!--mi borbuja izquierda-->
+                <img class="caras" src="imagenes/chathombre.svg">
+                <div class="burbuja izquierda">
+                    <div class="contexto">
+                        <a class="texto" href="#">Choá</a>
+                    </div>
+                    <img class="imgaudio" src="imagenes/audio.svg">
+                </div>
+            </div>
+                <!--mi borbuja derecha-->
+            <div class="contderecha"> 
+                <div class="burbuja derecha">
+                    <img class="imgaudio" src="imagenes/audio.svg">
+                        <div class="contexto">
+                            <a class="texto" href="#">Choá</a>
+                        </div>
+                </div>
+                <img class="caras" src="imagenes/chatmujer.svg">
+            </div>
+            <div class="contizquierda">
+                <img class="caras" src="imagenes/chathombre.svg">
+                <div class="burbuja izquierda">
+                    <div class="contexto">
+                        <a class="texto" href="#">Choá Mi nombre es Carlos y soy de Bogota</a>
+                    </div>
+                    <img class="imgaudio" src="imagenes/audio.svg">
+                </div>
+            </div>
+            <div class="contderecha">
+                <div class="burbuja derecha">
+                    <img class="imgaudio" src="imagenes/audio.svg">
+                        <div class="contexto">
+                            <a class="texto" href="#">Choá Mi nombre es Carlos y soy de Bogota Choá Mi nombre es Carlos y soy de Bogota Choá Mi nombre es Carlos y soy de Bogota</a>
+                        </div>
+                </div>
+                <img class="caras" src="imagenes/chatmujer.svg">
+            </div>
+<!--   Fin de mi propuesta      -->
+            <br>
             <a class= "bombaiz capa1 capa2" href="html/Saludos.html"><p>hola, como te llamas?</p></a>
             
             <a class= "bombader capa1 capa2" href="html/Decir-mi-nombre-y-lugar-de-procedencia.html"><p>Mi nombre es Carlosy soy de Bogota</p></a>
@@ -41,7 +81,7 @@
 
             <a class= "bombaiz capa1 capa2" href="#"><p>xxxxxxxxxxxxxx?</p></a>
             
-            <a class= "bombader capa1 capa2" href="#"><p>xxxxxxxxxxxxxxxx</p></a>
+            <div class= "bombader capa1 capa2"><a href="a">xxxxxxxxxxxxxxxx</a></div>
 
 
             <div class="pie">Desarrollado por www.libecolaboracion.org</div>
