--- a/app-muiscas/www/rondadecolores/html/estrofa2.html
+++ b/app-muiscas/www/rondadecolores/html/estrofa2.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="fondoestrofa2" >
-
+<h1 class="estrofa2">Madre Tierra regálame tus colores <br>para pintar...<br>Al Arcoiris...Cuchaviva</h1>
 </body>
 
 </html>
