--- a/app-muiscas/www/rondadecolores/html/estrofa3.html
+++ b/app-muiscas/www/rondadecolores/html/estrofa3.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="fondoestrofa3">
-
+<h1 class="estrofa3">Cuchaviva, regálame tus colores <br>para pintar...<br>Al Colibrí..Qinzha</h1>
 </body>
 
 </html>
