--- a/app-muiscas/www/rondadecolores/html/estrofa7.html
+++ b/app-muiscas/www/rondadecolores/html/estrofa7.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-
+<h1 class="estrofa7">Muyso, regálame tus colores <br>para pintar...<br>El Búho...Ezhinte</h1>
 </body>
 
 </html>
