--- a/app-muiscas/www/rondadecolores/html/estrofa9.html
+++ b/app-muiscas/www/rondadecolores/html/estrofa9.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-
+<h1 class="estrofa9">Cuchaviva,Qinzha, <br>Aso, Hycabai<br> Muyso, Ezhinte<br>Hiístcha Guaía, Tierra Madre<br>Hiístcha Guaía, Tierra Madre...Bis </h1>
 </body>
 
 </html>
