Acomodando botones numeros

--- a/app-muiscas/www/numeros/numerospr.html
+++ b/app-muiscas/www/numeros/numerospr.html
@@ -30,7 +30,7 @@
             <img class="logo" onclick="menu('#95C11E')" src="../img/menu.svg">
             <p class = "titulo">LOS NUMEROS</p>
         </div>
-        <div class= "cuerpo">
+        <div class= "cuerpo img">
           <div id="boton1"> </div>
           <div id="boton2"> </div>
           <div id="boton3"> </div>
