--- a/app-muiscas/www/rondadecolores/html/estrofa3.html
+++ b/app-muiscas/www/rondadecolores/html/estrofa3.html
@@ -11,6 +11,9 @@
 
 <body class="fondoestrofa3">
 <h1 class="estrofa3">Cuchaviva, regálame tus colores <br>para pintar...<br>Al Colibrí..Qinzha</h1>
+<div id="colibri" class="inicio gris">    
+<img  class="colibrigif" onclick="efectos('colibri','colibrigif final')" src="../imagenes/colibri.gif">
+</div>
 </body>
 
 </html>
