--- a/app-muiscas/www/numeros/numerospr.html
+++ b/app-muiscas/www/numeros/numerospr.html
@@ -30,11 +30,13 @@
             <img class="logo" onclick="menu('#95C11E')" src="../img/menu.svg">
             <p class = "titulo">LOS NUMEROS</p>
         </div>
-        <div class= "cuerpo img">
-          <div id="boton1"> </div>
-          <div id="boton2"> </div>
-          <div id="boton3"> </div>
-        
+        <div class= "cuerpo">
+          <div class="horizontal" > <img src="img/horizontal1.png"> </div>
+          <div class="horizontal" > <img src="img/horizontal2.png"> </div>
+        	 <div class="horizontal" > <img src="img/horizontal3.png"> </div>
+          <div class="vertical" > <img src="img/vertical1.png"> </div>
+          <div class="vertical" > <img src="img/vertical2.png"> </div>
+        	 <div class="vertical" > <img src="img/vertical3.png"> </div>
         </div>    
     </body>
 </html>
