unificando los menusgenerales invisibles, con un solo css

--- a/app-muiscas/www/index.html
+++ b/app-muiscas/www/index.html
@@ -16,7 +16,7 @@
 
         <div class= "cuerpo">
             <div class="botones derechos arriba">
-                <a class="textoicono" href="SaludosyPresentacion/saludos.html">
+                <a class="textoicono" href="saludos/saludos.html">
                     <img class="icono" src="img/triangulosbn.svg">
                         <p>Saludos</p>
                 </a>
