--- a/app-muiscas/www/saludos/html/presentacion.html
+++ b/app-muiscas/www/saludos/html/presentacion.html
@@ -9,14 +9,14 @@
         <link rel="stylesheet" media="all and (orientation:portrait)" type="text/css" href="../css/saludosxv.css">
                     <!-- Este es el css horizontal -->
         <link rel="stylesheet" media="all and (orientation:landscape)" type="text/css" href="../css/saludosxh.css">
-        <script src="../js/index.js" type="text/javascript"></script>
+        <script src="../../js/index.js" type="text/javascript"></script>
         <title>Saludos</title>
     </head>
     <body>
 <!--  menu    -->
 <nav id="menu" class="invisible">
         <ul>
-            <li class="titulomenu">Cartilla<br>Muysccubun<img onclick="menuc()" class="menuatras" src="../img/atrasmenu.svg"/></li>
+            <li class="titulomenu">Cartilla<br>Muysccubun<img onclick="menuc()" class="menuatras" src="../../img/atrasmenu.svg"/></li>
             <li class="menuli"><a href="../index.html"> Inicio</a></li>
             <li class="menuli"><a href="../SaludosyPresentacion/saludos.html"> Saludos y presentación</a></li>
             <li class="menuli"><a href="../numeros/numeros.html"> Numeros</a></li>
@@ -25,34 +25,17 @@
             <li class="menuli"><a href="../informacion/informacion.html"> Información</a></li>
         </ul>
     </nav>
-<!-- fin del menu    -->
+
         <div  class= "cabecera">
-            <img class="logo" onclick="menu('#1AB1E1')" src="../img/menu.svg">
+            <img class="logo" onclick="menu('#1AB1E1')" src="../../img/menu.svg">
             <p class = "titulo">Chat Myusscubun</p>
         </div>
-        <div class= "cuerpo chat">
+<!-- fin del menu    -->   
 
-<div><img src="../imagenes/sol.png" alt=""></div>
-<div>Lista de saludos y respuestas
 
-<div>Choá:xxxxxxxxxxxxxxxxxxxxxxxx</div>
-<div>Chogue:Xxxxxxxxxxxxxxxxxxxxxxx</div>
-<div>Chibu:xxxxxxxxxxxxxxxxxxxxxxx</div>
-<div>Guaza:xxxxxxxxxxxxxxxxxxxxxx</div>
-<div>Yesgua:xxxxxxxxxxxxxxxxxxxxxxxx</div>
-<div>Tyba:xxxxxxxxxxxxxxxxxxxxxxxx</div>
 
-<div>Chogue sua:xxxxxxxxxxxxxxxxxxxxxxxx</div>
 
-<div>Chogue sua mena:xxxxxxxxxxxxxxxxxxxxxxxx</div>
-<div>Chogue sua meca:xxxxxxxxxxxxxxxxxxxxxxxx</div>
-<div>Chogue za:xxxxxxxxxxxxxxxxxxxxxxxx</div>
-<div>Sua choc aguenua?:xxxxxxxxxxxxxxxxxxxxxxxx</div>
-<div>Sua choc aguene:xxxxxxxxxxxxxxxxxxxxxxxx</div>
-<div>Za choc aguenua?:xxxxxxxxxxxxxxxxxxxxxxxx</div>
-<div>Za choc aguene:xxxxxxxxxxxxxxxxxxxxxxxx</div>
-
- </div>
+<div>muñequito haciendo hola, con mapa </div>
         
     </body>
 </html>
