--- a/app-muiscas/www/numeros/html/numeros.html
+++ b/app-muiscas/www/numeros/html/numeros.html
@@ -1,5 +1,4 @@
-<!DOCTIPY hHTML>
-<html>
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
@@ -13,9 +12,11 @@
         <script src="../../js/index.js" type="text/javascript"></script>
         <title>Numeros Menu 1 a 10</title>
     </head>
+   
+
     <body>
 <!--  menu    -->
-	<nav id="menu" class="invisible">
+<nav id="menu" class="invisible">
         <ul>
             <li class="titulomenu">Cartilla<br>Muysccubun<img onclick="menuc()" class="menuatras" src="../../img/atrasmenu.svg"/></li>
             <li class="menuli"><a href="../../index.html"> Inicio</a></li>
@@ -27,7 +28,14 @@
         </ul>
     </nav>
 
-</head>
+       
+
+        <div  class= "cabecera">
+            <img class="logo" onclick="menu('#95C11E')" src="../../img/menu.svg">
+            <p class = "titulo">Numeros Menu 1 a 10</p>
+        </div>
+        
+<!-- fin del menu    --> 
 
 <body>
 <div class="cont1">
