terminada vertical pagina choá

--- a/app-muiscas/www/saludos/saludos.html
+++ b/app-muiscas/www/saludos/saludos.html
@@ -15,127 +15,125 @@
     <body>
 <!--  menu    -->
 <nav id="menu" class="invisible">
-        <ul>
-            <li class="titulomenu">Cartilla<br>Muysccubun<img onclick="menuc()" class="menuatras" src="../img/atrasmenu.svg"/></li>
-            <li class="menuli"><a href="../index.html"> Inicio</a></li>
-            <li class="menuli"><a href="../SaludosyPresentacion/saludos.html"> Saludos y presentación</a></li>
-            <li class="menuli"><a href="../numeros/numeros.html"> Numeros</a></li>
-            <li class="menuli"><a href="../mercado/mercado.html"> Mercado</a></li>
-            <li class="menuli"><a href="../rondadecolores/rondadecolores.html"> Ronda de colores</a></li>
-            <li class="menuli"><a href="../informacion/informacion.html"> Información</a></li>
-        </ul>
-    </nav>
-
-        <div  class= "cabecera">
-            <img class="logo" onclick="menu('#1AB1E1')" src="../img/menu.svg">
-            <p class = "titulo">Chat Myusscubun</p>
-        </div>
-        
+    <ul>
+        <li class="titulomenu">Cartilla<br>Muysccubun<img onclick="menuc()" class="menuatras" src="../img/atrasmenu.svg"/></li>
+        <li class="menuli"><a href="../index.html"> Inicio</a></li>
+        <li class="menuli"><a href="../SaludosyPresentacion/saludos.html"> Saludos y presentación</a></li>
+        <li class="menuli"><a href="../numeros/numeros.html"> Numeros</a></li>
+        <li class="menuli"><a href="../mercado/mercado.html"> Mercado</a></li>
+        <li class="menuli"><a href="../rondadecolores/rondadecolores.html"> Ronda de colores</a></li>
+        <li class="menuli"><a href="../informacion/informacion.html"> Información</a></li>
+    </ul>
+</nav>
+<div  class= "cabecera">
+    <img class="logo" onclick="menu('#1AB1E1')" src="../img/menu.svg">
+    <p class = "titulo">Chat Myusscubun</p>
+</div>
 <!-- fin del menu    -->
-        <div class= "cuerpo chat">
+<div class= "cuerpo">
 <!--   Mi propuesta de burbujas       -->
-            <div class="contizquierda"> <!--mi borbuja izquierda-->
-                <img class="caras" src="imagenes/chathombre.svg">
-                <div class="burbuja izquierda">
-                    <div class="contexto">
-                        <a class="texto" href="#">Choá</a>
-                    </div>
-                    <img class="imgaudio" src="../img/caracola.png">
-                </div>
+    <div class="contizquierda"> <!--mi borbuja izquierda-->
+        <img class="caras" src="imagenes/chathombre.svg">
+        <div class="burbuja izquierda">
+            <div class="contexto">
+                <a class="texto" href="html/choa.html">Choá</a>
             </div>
+            <img class="imgaudio" src="../img/caracola.png">
+        </div>
+    </div>
+        <!--mi borbuja derecha-->
+    <div class="contderecha"> 
+        <div class="burbuja derecha">
+            <img class="imgaudio" src="../img/caracola.png">
+                <div class="contexto">
+                    <a class="texto" href="#">Chogue</a>
+                </div>
+        </div>
+        <img class="caras" src="imagenes/chatmujer.svg">
+    </div>
+    <div class="contizquierda">
+        <img class="caras" src="imagenes/chathombre.svg">
+        <div class="burbuja izquierda">
+            <div class="contexto">
+                <a class="texto" href="#">Muaz choa umzone</a>
+            </div>
+            <img class="imgaudio" src="../img/caracola.png">
+        </div>
+    </div>
+    <div class="contderecha">
+        <div class="burbuja derecha">
+            <img class="imgaudio" src="../img/caracola.png">
+                <div class="contexto">
+                    <a class="texto" href="#">Ehe</a>
+                </div>
+        </div>
+        <img class="caras" src="imagenes/chatmujer.svg">
+    </div>
+    <div class="contizquierda"> <!--mi borbuja izquierda-->
+        <img class="caras" src="imagenes/chathombre.svg">
+        <div class="burbuja izquierda">
+            <div class="contexto">
+                <a class="texto" href="#">Zehica Carlos Fiquitiva gue nga cha Suba gue</a>
+            </div>
+            <img class="imgaudio" src="../img/caracola.png">
+        </div>
+    </div>
+        <!--mi borbuja derecha-->
+    <div class="contderecha"> 
+        <div class="burbuja derecha">
+            <img class="imgaudio" src="../img/caracola.png">
+            <div class="contexto">
+                <a class="texto" href="#">Zehica Diana Garibello gue nga cha Bosa gue</a>
+            </div>
+        </div>
+        <img class="caras" src="imagenes/chatmujer.svg">
+    </div>
+    <div class="contizquierda"> <!--mi borbuja izquierda-->
+        <img class="caras" src="imagenes/chathombre.svg">
+        <div class="burbuja izquierda">
+            <div class="contexto">
+                <a class="texto" href="#">Ipquo ahyca?</a>
+            </div>
+            <img class="imgaudio" src="../img/caracola.png">
+        </div>
+    </div>
+    <div class="contderecha">
+        <div class="burbuja derecha">
+            <img class="imgaudio" src="../img/caracola.png">
+            <div class="contexto">
+                <a class="texto" href="#">Juan Garibello gue ahyca</a>
+            </div>
+        </div>            
+        <img class="caras" src="imagenes/chatmujer.svg">
+    </div>
+    <div class="contizquierda"> <!--mi borbuja izquierda-->
+        <img class="caras" src="imagenes/chathombre.svg">
+        <div class="burbuja izquierda">
+            <div class="contexto">
+                <a class="texto" href="#">Ipquá zeguaque nzinga</a>
+            </div>
+            <img class="imgaudio" src="../img/caracola.png">
+        </div>
+    </div>
                 <!--mi borbuja derecha-->
-            <div class="contderecha"> 
-                <div class="burbuja derecha">
-                    <img class="imgaudio" src="../img/caracola.png">
-                        <div class="contexto">
-                            <a class="texto" href="#">Chogue</a>
-                        </div>
-                </div>
-                <img class="caras" src="imagenes/chatmujer.svg">
+    <div class="contderecha"> 
+        <div class="burbuja derecha">
+            <img class="imgaudio" src="../img/caracola.png">
+            <div class="contexto">
+                <a class="texto" href="#">Ipqua. Mis ichosqua</a>
             </div>
-            <div class="contizquierda">
-                <img class="caras" src="imagenes/chathombre.svg">
-                <div class="burbuja izquierda">
-                    <div class="contexto">
-                        <a class="texto" href="#">Muaz choa umzone</a>
-                    </div>
-                    <img class="imgaudio" src="../img/caracola.png">
-                </div>
+        </div>
+        <img class="caras" src="imagenes/chatmujer.svg">
+    </div>
+    <div class="contizquierda"> <!--mi borbuja izquierda-->
+        <img class="caras" src="imagenes/chathombre.svg">
+        <div class="burbuja izquierda">
+            <div class="contexto">
+                <a class="texto" href="#">Mis ichosqua</a>
             </div>
-            <div class="contderecha">
-                <div class="burbuja derecha">
-                    <img class="imgaudio" src="../img/caracola.png">
-                        <div class="contexto">
-                            <a class="texto" href="#">Ehe</a>
-                        </div>
-                </div>
-                <img class="caras" src="imagenes/chatmujer.svg">
-            </div>
-            <div class="contizquierda"> <!--mi borbuja izquierda-->
-                <img class="caras" src="imagenes/chathombre.svg">
-                <div class="burbuja izquierda">
-                    <div class="contexto">
-                        <a class="texto" href="#">Zehica Carlos Fiquitiva gue nga cha Suba gue</a>
-                    </div>
-                    <img class="imgaudio" src="../img/caracola.png">
-                </div>
-            </div>
-                <!--mi borbuja derecha-->
-            <div class="contderecha"> 
-                <div class="burbuja derecha">
-                    <img class="imgaudio" src="../img/caracola.png">
-                        <div class="contexto">
-                            <a class="texto" href="#">Zehica Diana Garibello gue nga cha Bosa gue</a>
-                        </div>
-                </div>
-                <img class="caras" src="imagenes/chatmujer.svg">
-            </div>
-            <div class="contizquierda"> <!--mi borbuja izquierda-->
-                <img class="caras" src="imagenes/chathombre.svg">
-                <div class="burbuja izquierda">
-                    <div class="contexto">
-                        <a class="texto" href="#">Ipquo ahyca?</a>
-                    </div>
-                    <img class="imgaudio" src="../img/caracola.png">
-                </div>
-            </div>
-            <div class="contderecha">
-                <div class="burbuja derecha">
-                    <img class="imgaudio" src="../img/caracola.png">
-                        <div class="contexto">
-                            <a class="texto" href="#">Juan Garibello gue ahyca</a>
-                        </div>
-                </div>            
-            <img class="caras" src="imagenes/chatmujer.svg">
-         </div>
-         <div class="contizquierda"> <!--mi borbuja izquierda-->
-                <img class="caras" src="imagenes/chathombre.svg">
-                <div class="burbuja izquierda">
-                    <div class="contexto">
-                        <a class="texto" href="#">Ipquá zeguaque nzinga</a>
-                    </div>
-                    <img class="imgaudio" src="../img/caracola.png">
-                </div>
-            </div>
-                <!--mi borbuja derecha-->
-            <div class="contderecha"> 
-                <div class="burbuja derecha">
-                    <img class="imgaudio" src="../img/caracola.png">
-                        <div class="contexto">
-                            <a class="texto" href="#">Ipqua. Mis ichosqua</a>
-                        </div>
-                </div>
-                <img class="caras" src="imagenes/chatmujer.svg">
-            </div>
-            <div class="contizquierda"> <!--mi borbuja izquierda-->
-                <img class="caras" src="imagenes/chathombre.svg">
-                <div class="burbuja izquierda">
-                    <div class="contexto">
-                        <a class="texto" href="#">Miis ichosqua</a>
-                    </div>
-                    <img class="imgaudio" src="../img/caracola.png">
-                </div>
-            </div>
+            <img class="imgaudio" src="../img/caracola.png">
+        </div>
+    </div>
 </div>
 </body>
 </html>
